5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1664_2973.log
== TEST (2019-04-16 10:15:46) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t

-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:07) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <= 100m/s):
	print(OK)
else:
	print(ACIMA)

-- ERROR:
File "XXXX", line 5
    if(S <= 100m/s):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:25) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <== 100m/s):
	print(OK)
else:
	print(ACIMA)

-- ERROR:
File "XXXX", line 5
    if(S <== 100m/s):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:35) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <= 100):
	print(OK)
else:
	print(ACIMA)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(ACIMA)
NameError: name 'ACIMA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:01) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <= 100):
	print(OK)
else:
	print(ACIMA)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(ACIMA)
NameError: name 'ACIMA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:40) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:18:49) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <= 100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.150683
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:56) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(S <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:20:37) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.148074
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:37) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:20:57) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(V <= 100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.149203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2973/main.py", line 5, in <module>
    if(V <= 100):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:10) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(V <= 100):
	print("OK")
else:
	print("ACIMA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(V <= 100):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:30) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if( <= 100):
	print("OK")
else:
	print("ACIMA")

-- ERROR:
File "XXXX", line 5
    if( <= 100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:34) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:23:28) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print(("OK")(3400))
else:
	print(("ACIMA")(3400))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(("OK")(3400))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:23:53) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print(("OK")("3400"))
else:
	print(("ACIMA")("3400"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(("OK")("3400"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:51) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:25) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = 3400
if(v <= 100):
	print("OK")
else:
	print("ACIMA" "S")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:40) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = 3400
if(v <= 100):
	print(("OK")("S"))
else:
	print(("ACIMA")("S"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(("OK")("S"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:36:00) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = 3400
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:21) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:32) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("3400")
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:45:39) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print("3400")
	print("ACIMA")

-- EXECUTION TIME:
0.21083
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
3400
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:45) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(3400)
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:45:56) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(3400)
	print("ACIMA")

-- EXECUTION TIME:
0.213238
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
3400
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:06) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(3400)
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:38) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
	print(3400)
else:
	print(3400)
	print("ACIMA")

-- OUTPUT:
OK
3400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:46:45) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
	print(3400)
else:
	print(3400)
	print("ACIMA")

-- EXECUTION TIME:
0.190107
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
3400
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
3400
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
3400
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:47:01) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
	print("3400")
else:
	print("3400")
	print("ACIMA")

-- OUTPUT:
OK
3400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:47:07) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
	print("3400")
else:
	print("3400")
	print("ACIMA")

-- EXECUTION TIME:
0.249749
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
3400
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
3400
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
3400
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:47:23) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(3400)
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:19) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(3400):
	print("ACIMA")

-- ERROR:
File "XXXX", line 8
    print(3400):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:23) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(3400)
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:49:53) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(S)
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:50:02) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
if(v <= 100):
	print("OK")
else:
	print(S)
	print("ACIMA")

-- EXECUTION TIME:
0.12764
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:51:40) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
print(S)
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:51:47) 
-- CODE:
S0 = int(input("posicao inicial:"))
v = int(input("velocidade final:"))
t = int(input("tempo de deslocamento:"))
S = S0 + v * t
print(S)
if(v <= 100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.162136
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
